# CodeDroid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TERMUX_SETUP.md  build_android_binaries.sh  build_api.sh  install.sh  live_test.html  run.sh  setup_alpine.sh
codedroid_api/: Cargo.toml  README.md
codedroid_api/.cargo/: config.toml
codedroid_api/src/: diagnostics.rs  error_suggestions.rs  git.rs  handlers.rs  install_language.rs  lib.rs  live_server.rs  lsp.rs  main.rs  models.rs  runner.rs  terminal.rs  utils.rs
codedroid_api/test_p/src/: main.rs
codedroid_api/test_proj/: Cargo.toml
codedroid_api/test_proj/src/: main.rs
codedroid_frontend/: Cargo.toml  README.md  index.html  style.css  sw.js
codedroid_frontend/src/: api.rs  main.rs  models.rs  store.rs
codedroid_frontend/src/components/: app_bar.rs  icon.rs  mod.rs  new_project_modal.rs  snackbar.rs
codedroid_frontend/src/pages/: docs.rs  editor.rs  home.rs  mod.rs  settings.rs
codedroid_frontend/src/pages/editor/: agent_panel.rs  code_area.rs  components.rs  context_menu.rs  error_popover.rs  footer.rs  git_panel.rs  hover.rs  mod.rs  outline.rs  preview.rs  search_bar.rs  suggestions.rs  utils.rs
codedroid_frontend/src/pages/editor/operations/: add_dep.rs  check_error_at_cursor.rs  close_tab.rs  copy_code.rs  create_file.rs  create_folder.rs  delete_entry.rs  format_code.rs  mod.rs  move_entry.rs  on_click_problem.rs  on_click_reference.rs  on_select.rs  open_file.rs  paste_entry.rs  run_code.rs  save_current.rs  stop_code.rs  sync_from_disk.rs  sync_project.rs  trigger_definition.rs  trigger_references.rs  (+1 more)
codedroid_frontend/ts_test/: Cargo.toml
(+65 files in other folders)
