[package]
name = "codedroid_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "codedroid_api"
path = "src/lib.rs"

[[bin]]
name = "codedroid_api"
path = "src/main.rs"


[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
regex = "1.10"
